Added ending screen

--- a/PPG Project/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/PPG Project/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -325,7 +325,8 @@ SpawnPages_2=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.TransformCom
 BP_Shop_C=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SpringArmComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,Landscape.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.itemData
 WB_CurrencyIndicator_C=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SpringArmComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,Landscape.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.itemData
 WB_BuyItem_C=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SpringArmComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,Landscape.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.itemData
-WB_HotBar_C=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SpringArmComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,Landscape.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.itemData
+WB_HotBar_C=
+WB_GameOver_C=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SpringArmComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,Landscape.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.itemData
 
 [EditorStartup]
 LastLevel=/Game/Level1
@@ -639,13 +640,13 @@ BPC_EquipmentSystem_C="\"Object\" "
 K2Node_InputDebugKey="\"Object\" "
 BPS_Player_Stats_C="\"Object\" "
 CanvasPanel="\"Object\" \"Object.Layout.Slot\" "
-PanelWidget="\"Object\" \"Object.Layout.Slot\" "
+PanelWidget="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Layout.Slot\" "
 ProgressBar="\"Object\" "
 WB_HUD_C="\"Object\" "
 UserWidget="\"Object\" "
 BPC_Player_Stats_C="\"Object\" "
-TextBlock="\"Object\" \"Object.Layout.Slot\" "
-TextLayoutWidget="\"Object\" \"Object.Layout.Slot\" "
+TextBlock="\"Object\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Font.OutlineSettings.OutlineColor\" \"Object.Layout.Slot\" "
+TextLayoutWidget="\"Object\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Font.OutlineSettings.OutlineColor\" \"Object.Layout.Slot\" "
 VerticalBox="\"Object\" \"Object.Layout.Slot\" "
 Border="\"Object\" "
 ContentWidget="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Layout.Slot\" "
@@ -662,6 +663,7 @@ WB_CurrencyIndicator_C="\"Object\" "
 WB_BuyItem_C="\"Object\" \"Object.Layout.Slot\" "
 MultiLineEditableTextBox="\"Object\" \"Object.Layout.Slot\" "
 WB_HotBar_C="\"Object\" "
+WB_GameOver_C="\"Object\" "
 
 [DetailCategories]
 WorldPartitionRuntimeSpatialHash.RuntimeSettings=True
@@ -2346,9 +2348,7 @@ CleanShutdown=False
 OpenAssetsAtExit=/Game/Equipment_System/UI/WB_Equipment.WB_Equipment
 OpenAssetsAtExit=/Game/Blueprints/BP_PlayerCharacter.BP_PlayerCharacter
 OpenAssetsAtExit=/Game/Blueprints/Shop/BP_Shop.BP_Shop
-OpenAssetsAtExit=/Game/Blueprints/Shop/WB_BuyItem.WB_BuyItem
 OpenAssetsAtExit=/Game/Equipment_System/BPC_EquipmentSystem.BPC_EquipmentSystem
-OpenAssetsAtExit=/Game/Equipment_System/UI/WB_HotBar.WB_HotBar
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -2453,26 +2453,26 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Equipment_System/UI/WB_Equipable_Slot
-MRUItem1=/Game/Equipment_System/UI/WB_HotBar
-MRUItem2=/Game/Level1
-MRUItem3=/Game/Equipment_System/BPC_EquipmentSystem
-MRUItem4=/Game/Blueprints/Shop/WB_BuyItem
-MRUItem5=/Game/Blueprints/Shop/BP_Shop
-MRUItem6=/Game/Blueprints/BP_PlayerCharacter
-MRUItem7=/Game/Equipment_System/UI/WB_Equipment
-MRUItem8=/Game/Blueprints/Shop/WB_CurrencyIndicator
-MRUItem9=/Game/Blueprints/BP_Shop
-MRUItem10=/Game/UI/WB_CurrencyIndicator
-MRUItem11=/Game/Blueprints/Objects/Chest/BP_Chest
-MRUItem12=/Game/Blueprints/BP_GameMode
-MRUItem13=/Game/Equipment_System/DB_Weapons
-MRUItem14=/Game/Equipment_System/BP_Weapon
-MRUItem15=/Game/Blueprints/BP_SpawnPoint
-MRUItem16=/Game/Blueprints/BPC_Player_Stats
-MRUItem17=/Game/Equipment_System/UI/WB_Item_Slot
-MRUItem18=/Game/Equipment_System/S_Slots
-MRUItem19=/Game/Blueprints/BP_Projectile
+MRUItem0=/Game/UI/WB_GameOver
+MRUItem1=/Game/Equipment_System/UI/WB_Equipable_Slot
+MRUItem2=/Game/Equipment_System/UI/WB_HotBar
+MRUItem3=/Game/Level1
+MRUItem4=/Game/Equipment_System/BPC_EquipmentSystem
+MRUItem5=/Game/Blueprints/Shop/WB_BuyItem
+MRUItem6=/Game/Blueprints/Shop/BP_Shop
+MRUItem7=/Game/Blueprints/BP_PlayerCharacter
+MRUItem8=/Game/Equipment_System/UI/WB_Equipment
+MRUItem9=/Game/Blueprints/Shop/WB_CurrencyIndicator
+MRUItem10=/Game/Blueprints/BP_Shop
+MRUItem11=/Game/UI/WB_CurrencyIndicator
+MRUItem12=/Game/Blueprints/Objects/Chest/BP_Chest
+MRUItem13=/Game/Blueprints/BP_GameMode
+MRUItem14=/Game/Equipment_System/DB_Weapons
+MRUItem15=/Game/Equipment_System/BP_Weapon
+MRUItem16=/Game/Blueprints/BP_SpawnPoint
+MRUItem17=/Game/Blueprints/BPC_Player_Stats
+MRUItem18=/Game/Equipment_System/UI/WB_Item_Slot
+MRUItem19=/Game/Equipment_System/S_Slots
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -2626,6 +2626,7 @@ SkeletalMeshComponent.ComponentTick=False
 /Game/Blueprints/Shop/WB_CurrencyIndicator.WB_CurrencyIndicator=0
 /Game/Blueprints/Shop/BP_Shop.BP_Shop=0
 /Game/Blueprints/Shop/WB_BuyItem.WB_BuyItem=0
+/Game/Equipment_System/UI/WB_HotBar.WB_HotBar=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
