Added xp and level

--- a/PPG Project/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/PPG Project/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -263,9 +263,9 @@ TemplateSequenceEditorSettings=InputSettings.Bindings.ActionMappings,InputSettin
 UdpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.ActionMappings.Crouch,InputSettings.Bindings.ActionMappings.CameraSwitch,InputSettings.Bindings.ActionMappings.ChangeTypeOfProjectile,InputSettings.Bindings.ActionMappings.Sprint,InputSettings.Bindings.ActionMappings.Aim,InputSettings.Bindings.ActionMappings.Fire,InputSettings.Bindings.ActionMappings.Interaction,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.Test,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings.WheelUp,InputSettings.Bindings.AxisMappings.WheelDown,InputSettings.Bindings.AxisMappings.ZoomCamera,InputSettings.Bindings.AxisMappings.Go,IOSRuntimeSettings.Build.Remote Build Options,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,GameMapsSettings.DefaultModes.SelectedGameModeDetails,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod
 WmfMediaSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.ActionMappings.Crouch,InputSettings.Bindings.ActionMappings.CameraSwitch,InputSettings.Bindings.ActionMappings.ChangeTypeOfProjectile,InputSettings.Bindings.ActionMappings.Sprint,InputSettings.Bindings.ActionMappings.Aim,InputSettings.Bindings.ActionMappings.Fire,InputSettings.Bindings.ActionMappings.Interaction,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.Test,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings.WheelUp,InputSettings.Bindings.AxisMappings.WheelDown,InputSettings.Bindings.AxisMappings.ZoomCamera,InputSettings.Bindings.AxisMappings.Go,IOSRuntimeSettings.Build.Remote Build Options,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,GameMapsSettings.DefaultModes.SelectedGameModeDetails,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMode.SelectedGameModeDetails
-WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMode.SelectedGameModeDetails
+WorldPartitionRuntimeSpatialHash=
 BlendSpace=BlendSpace.Axis Settings.Vertical Axis,BlendSpace.Axis Settings.Horizontal Axis
-SkeletalMeshComponent=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SpringArmComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,Landscape.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.itemData
+SkeletalMeshComponent=
 BP_PlayerCharacter_C=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SpringArmComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,Landscape.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.itemData
 K2Node_VariableGet=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SpringArmComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,Landscape.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.itemData
 K2Node_InputKey=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SpringArmComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,Landscape.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.itemData
@@ -327,6 +327,7 @@ WB_CurrencyIndicator_C=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.Tr
 WB_BuyItem_C=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SpringArmComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,Landscape.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.itemData
 WB_HotBar_C=
 WB_GameOver_C=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SpringArmComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,Landscape.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.itemData
+K2Node_FormatText=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SpringArmComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,Landscape.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.itemData
 
 [EditorStartup]
 LastLevel=/Game/Level1
@@ -334,7 +335,7 @@ LastLevel=/Game/Level1
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" \"Object.RuntimeSettings.Grids\" \"Object.RuntimeSettings.Grids.Grids[0]\" "
 WorldPartitionRuntimeHash="\"Object\" \"Object.RuntimeSettings.Grids\" \"Object.RuntimeSettings.Grids.Grids[0]\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.RuntimeSettings.Grids\" \"Object.RuntimeSettings.Grids.Grids[0]\" "
 SkeletalMeshComponent="\"Object\" "
 SkinnedMeshComponent="\"Object\" "
 MeshComponent="\"Object\" "
@@ -621,8 +622,8 @@ TextureRenderTarget2D="\"Object\" "
 TextureRenderTarget="\"Object\" "
 Texture="\"Object\" "
 Image="\"Object\" \"Object.Appearance.Brush\" \"Object.Appearance.Brush.ImageSize\" \"Object.Layout.Slot\" "
-Widget="\"Object\" "
-Visual="\"Object\" "
+Widget="\"Object\" \"Object.Appearance.Brush\" \"Object.Appearance.Brush.ImageSize\" \"Object.Layout.Slot\" "
+Visual="\"Object\" \"Object.Appearance.Brush\" \"Object.Appearance.Brush.ImageSize\" \"Object.Layout.Slot\" "
 PaperSpriteComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 Texture2D="\"Object\" "
 GeometryCollectionActor="\"Object.Destruction.GeometryCollectionComponent.Object.ChaosPhysics.ChaosPhysics|General\" \"Object.Destruction.GeometryCollectionComponent.Object.ChaosPhysics.ChaosPhysics|Collisions\" \"Object.Destruction.GeometryCollectionComponent.Object.ChaosPhysics.ChaosPhysics|Events\" \"Object.Destruction.GeometryCollectionComponent.Object.Collision.BodyInstance\" "
@@ -640,16 +641,16 @@ BPC_EquipmentSystem_C="\"Object\" "
 K2Node_InputDebugKey="\"Object\" "
 BPS_Player_Stats_C="\"Object\" "
 CanvasPanel="\"Object\" \"Object.Layout.Slot\" "
-PanelWidget="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Layout.Slot\" "
-ProgressBar="\"Object\" "
+PanelWidget="\"Object\" \"Object.Layout.Slot\" "
+ProgressBar="\"Object\" \"Object.Layout.Slot\" "
 WB_HUD_C="\"Object\" "
-UserWidget="\"Object\" "
+UserWidget="\"Object\" \"Object.Layout.Slot\" "
 BPC_Player_Stats_C="\"Object\" "
 TextBlock="\"Object\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Font.OutlineSettings.OutlineColor\" \"Object.Layout.Slot\" "
 TextLayoutWidget="\"Object\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Font.OutlineSettings.OutlineColor\" \"Object.Layout.Slot\" "
 VerticalBox="\"Object\" \"Object.Layout.Slot\" "
 Border="\"Object\" "
-ContentWidget="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Layout.Slot\" "
+ContentWidget="\"Object\" \"Object.Layout.Slot\" "
 SizeBox="\"Object\" \"Object.Layout.Slot\" "
 Button="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Layout.Slot\" "
 WB_Equipable_Slot_C="\"Object\" \"Object.Layout.Slot\" "
@@ -2342,13 +2343,15 @@ WB_HotBar_C.Accessibility=True
 WB_HotBar_C.Clipping=True
 WB_HotBar_C.Navigation=True
 WB_Equipable_Slot_C.Events=True
+K2Node_FormatText.Arguments=True
 
 [AssetEditorSubsystem]
-CleanShutdown=False
-OpenAssetsAtExit=/Game/Equipment_System/UI/WB_Equipment.WB_Equipment
+CleanShutdown=True
 OpenAssetsAtExit=/Game/Blueprints/BP_PlayerCharacter.BP_PlayerCharacter
 OpenAssetsAtExit=/Game/Blueprints/Shop/BP_Shop.BP_Shop
-OpenAssetsAtExit=/Game/Equipment_System/BPC_EquipmentSystem.BPC_EquipmentSystem
+OpenAssetsAtExit=/Game/Blueprints/BPC_Player_Stats.BPC_Player_Stats
+OpenAssetsAtExit=/Game/UI/WB_HUD.WB_HUD
+OpenAssetsAtExit=/Game/Blueprints/Shop/WB_BuyItem.WB_BuyItem
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -2402,7 +2405,7 @@ ContentBrowserTab1.VerticalSplitter.SlotSize1=0.75
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserTab1.SelectedPaths=/Game/Equipment_System/UI
+ContentBrowserTab1.SelectedPaths=/Game/UI/Minimap
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 ContentBrowserTab1.SelectedCollections=
@@ -2453,26 +2456,26 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [ContentBrowserRecent]
-MRUItem0=/Game/UI/WB_GameOver
-MRUItem1=/Game/Equipment_System/UI/WB_Equipable_Slot
-MRUItem2=/Game/Equipment_System/UI/WB_HotBar
-MRUItem3=/Game/Level1
-MRUItem4=/Game/Equipment_System/BPC_EquipmentSystem
-MRUItem5=/Game/Blueprints/Shop/WB_BuyItem
-MRUItem6=/Game/Blueprints/Shop/BP_Shop
-MRUItem7=/Game/Blueprints/BP_PlayerCharacter
-MRUItem8=/Game/Equipment_System/UI/WB_Equipment
-MRUItem9=/Game/Blueprints/Shop/WB_CurrencyIndicator
-MRUItem10=/Game/Blueprints/BP_Shop
-MRUItem11=/Game/UI/WB_CurrencyIndicator
-MRUItem12=/Game/Blueprints/Objects/Chest/BP_Chest
-MRUItem13=/Game/Blueprints/BP_GameMode
-MRUItem14=/Game/Equipment_System/DB_Weapons
-MRUItem15=/Game/Equipment_System/BP_Weapon
-MRUItem16=/Game/Blueprints/BP_SpawnPoint
-MRUItem17=/Game/Blueprints/BPC_Player_Stats
-MRUItem18=/Game/Equipment_System/UI/WB_Item_Slot
-MRUItem19=/Game/Equipment_System/S_Slots
+MRUItem0=/Game/Blueprints/Shop/WB_BuyItem
+MRUItem1=/Game/UI/WB_HUD
+MRUItem2=/Game/Blueprints/BPC_Player_Stats
+MRUItem3=/Game/UI/WB_GameOver
+MRUItem4=/Game/Equipment_System/UI/WB_Equipable_Slot
+MRUItem5=/Game/Equipment_System/UI/WB_HotBar
+MRUItem6=/Game/Level1
+MRUItem7=/Game/Equipment_System/BPC_EquipmentSystem
+MRUItem8=/Game/Blueprints/Shop/BP_Shop
+MRUItem9=/Game/Blueprints/BP_PlayerCharacter
+MRUItem10=/Game/Equipment_System/UI/WB_Equipment
+MRUItem11=/Game/Blueprints/Shop/WB_CurrencyIndicator
+MRUItem12=/Game/Blueprints/BP_Shop
+MRUItem13=/Game/UI/WB_CurrencyIndicator
+MRUItem14=/Game/Blueprints/Objects/Chest/BP_Chest
+MRUItem15=/Game/Blueprints/BP_GameMode
+MRUItem16=/Game/Equipment_System/DB_Weapons
+MRUItem17=/Game/Equipment_System/BP_Weapon
+MRUItem18=/Game/Blueprints/BP_SpawnPoint
+MRUItem19=/Game/Equipment_System/UI/WB_Item_Slot
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -2627,6 +2630,7 @@ SkeletalMeshComponent.ComponentTick=False
 /Game/Blueprints/Shop/BP_Shop.BP_Shop=0
 /Game/Blueprints/Shop/WB_BuyItem.WB_BuyItem=0
 /Game/Equipment_System/UI/WB_HotBar.WB_HotBar=0
+/Game/UI/WB_GameOver.WB_GameOver=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2675,7 +2679,7 @@ GraphEditorQuickJumps=()
 
 [RootWindow]
 ScreenPosition=X=0.000 Y=0.000
-WindowSize=X=1350.000 Y=790.000
+WindowSize=X=1352.000 Y=792.000
 InitiallyMaximized=True
 
 [Directories2]
