--- a/PPG Project/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/PPG Project/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -265,15 +265,15 @@ WmfMediaSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.Ac
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMode.SelectedGameModeDetails
 WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMode.SelectedGameModeDetails
 BlendSpace=BlendSpace.Axis Settings.Vertical Axis,BlendSpace.Axis Settings.Horizontal Axis
-SkeletalMeshComponent=SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision
-BP_PlayerCharacter_C=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SpringArmComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,Landscape.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.itemData
+SkeletalMeshComponent=
+BP_PlayerCharacter_C=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SpringArmComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,Landscape.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.itemData
 K2Node_VariableGet=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SpringArmComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,Landscape.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.itemData
 K2Node_InputKey=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SpringArmComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,Landscape.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.itemData
-K2Node_VariableSet=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SpringArmComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,Landscape.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.itemData
+K2Node_VariableSet=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SpringArmComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,Landscape.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.itemData
 PropertyWrapper=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SpringArmComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,Landscape.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.itemData
-CapsuleComponent=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SpringArmComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,Landscape.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.itemData
+CapsuleComponent=
 LandscapeStreamingProxy=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SpringArmComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision,Landscape.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,PropertyWrapper.DefaultValueCategory.itemData
-SceneComponent=
+SceneComponent=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SpringArmComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,Landscape.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.itemData
 K2Node_MacroInstance=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SpringArmComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,Landscape.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.itemData
 K2Node_CustomEvent=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SpringArmComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,Landscape.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.itemData
 Landscape=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SpringArmComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision,Landscape.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,PropertyWrapper.DefaultValueCategory.itemData
@@ -331,8 +331,10 @@ K2Node_FormatText=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.Transfo
 BP_NPC_C=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SpringArmComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,Landscape.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.itemData
 PDA_Dialog_C=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SpringArmComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,Landscape.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.itemData
 BP_DialogComponent_C=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SpringArmComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,Landscape.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.itemData
-WB_Dialog_C=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SpringArmComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,Landscape.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.itemData
+WB_Dialog_C=
 WB_DialogChoice_C=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SpringArmComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,Landscape.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.itemData
+BP_NPC_2_C=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SpringArmComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,Landscape.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.itemData
+BP_NPC_3_C=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SpringArmComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,Landscape.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.itemData
 
 [EditorStartup]
 LastLevel=/Game/Level1
@@ -521,7 +523,7 @@ GameplayTagsDeveloperSettings="\"Object\" "
 LogVisualizerSettings="\"Object\" "
 PersonaPreviewSceneDescription="\"Object\" "
 PreviewMeshCollection="\"Object\" \"Object.SkeletalMeshes\" "
-DataAsset="\"Object\" "
+DataAsset="\"Object\" \"Object.Default.Dialogs\" \"Object.Default.Dialogs.Dialogs[0]\" \"Object.Default.Dialogs.Dialogs[0].NextDialogOptions_17_37C896144B7BEA540A4F429FBCA71FC2\" \"Object.Default.Dialogs.Dialogs[1]\" "
 AssetViewerSettings="\"Object\" "
 Locomotion_BS_C="\"Object\" "
 AnimInstance="\"Object\" "
@@ -672,11 +674,13 @@ WB_HotBar_C="\"Object\" "
 WB_GameOver_C="\"Object\" "
 BP_NPC_C="\"Object\" "
 PrimaryAssetLabel="\"Object\" "
-PrimaryDataAsset="\"Object\" "
-PDA_Dialog_C="\"Object\" "
+PrimaryDataAsset="\"Object\" \"Object.Default.Dialogs\" \"Object.Default.Dialogs.Dialogs[0]\" \"Object.Default.Dialogs.Dialogs[0].NextDialogOptions_17_37C896144B7BEA540A4F429FBCA71FC2\" \"Object.Default.Dialogs.Dialogs[1]\" "
+PDA_Dialog_C="\"Object\" \"Object.Default.Dialogs\" \"Object.Default.Dialogs.Dialogs[0]\" \"Object.Default.Dialogs.Dialogs[0].NextDialogOptions_17_37C896144B7BEA540A4F429FBCA71FC2\" \"Object.Default.Dialogs.Dialogs[1]\" "
 BP_DialogComponent_C="\"Object\" "
 WB_Dialog_C="\"Object\" "
 WB_DialogChoice_C="\"Object\" "
+BP_NPC_2_C="\"Object\" "
+BP_NPC_3_C="\"Object\" "
 
 [DetailCategories]
 WorldPartitionRuntimeSpatialHash.RuntimeSettings=True
@@ -2450,18 +2454,126 @@ WB_DialogChoice_C.Navigation=True
 BP_DialogComponent_C.Sockets=True
 BP_DialogComponent_C.Default=True
 BP_DialogComponent_C.Events=True
+BP_NPC_2_C.TransformCommon=True
+BP_NPC_2_C.Animation=True
+BP_NPC_2_C.Mesh=True
+BP_NPC_2_C.Physics=True
+BP_NPC_2_C.Clothing=True
+BP_NPC_2_C.Collision=True
+BP_NPC_2_C.LeaderPoseComponent=True
+BP_NPC_2_C.Lighting=True
+BP_NPC_2_C.AnimationRig=True
+BP_NPC_2_C.Deformer=True
+BP_NPC_2_C.SkinWeights=True
+BP_NPC_2_C.Rendering=True
+BP_NPC_2_C.HLOD=True
+BP_NPC_2_C.PathTracing=True
+BP_NPC_2_C.Mobile=True
+BP_NPC_2_C.Navigation=True
+BP_NPC_2_C.RayTracing=True
+BP_NPC_2_C.VirtualTexture=True
+BP_NPC_2_C.Tags=True
+BP_NPC_2_C.AssetUserData=True
+BP_NPC_2_C.Activation=True
+BP_NPC_2_C.Cooking=True
+BP_NPC_2_C.Character Movement (General Settings)=True
+BP_NPC_2_C.Character Movement: Walking=True
+BP_NPC_2_C.Character Movement: Jumping / Falling=True
+BP_NPC_2_C.Character Movement (Networking)=True
+BP_NPC_2_C.Character Movement: Swimming=True
+BP_NPC_2_C.Character Movement: Flying=True
+BP_NPC_2_C.Character Movement: Custom Movement=True
+BP_NPC_2_C.Character Movement (Rotation Settings)=True
+BP_NPC_2_C.Character Movement: Physics Interaction=True
+BP_NPC_2_C.Character Movement=True
+BP_NPC_2_C.Character Movement: Avoidance=True
+BP_NPC_2_C.RootMotion=True
+BP_NPC_2_C.Character Movement: NavMesh Movement=True
+BP_NPC_2_C.NavMovement=True
+BP_NPC_2_C.Velocity=True
+BP_NPC_2_C.PlanarMovement=True
+BP_NPC_2_C.MovementComponent=True
+BP_NPC_2_C.Shape=True
+BP_NPC_2_C.Character=True
+BP_NPC_2_C.Camera=True
+BP_NPC_2_C.Pawn=True
+BP_NPC_2_C.Replication=True
+BP_NPC_2_C.Networking=True
+BP_NPC_2_C.WorldPartition=True
+BP_NPC_2_C.Input=True
+BP_NPC_2_C.Actor=True
+BP_NPC_2_C.Materials=True
+BP_NPC_3_C.TransformCommon=True
+BP_NPC_3_C.Animation=True
+BP_NPC_3_C.Mesh=True
+BP_NPC_3_C.Physics=True
+BP_NPC_3_C.Clothing=True
+BP_NPC_3_C.Collision=True
+BP_NPC_3_C.LeaderPoseComponent=True
+BP_NPC_3_C.Lighting=True
+BP_NPC_3_C.AnimationRig=True
+BP_NPC_3_C.Deformer=True
+BP_NPC_3_C.SkinWeights=True
+BP_NPC_3_C.Rendering=True
+BP_NPC_3_C.HLOD=True
+BP_NPC_3_C.PathTracing=True
+BP_NPC_3_C.Mobile=True
+BP_NPC_3_C.Navigation=True
+BP_NPC_3_C.RayTracing=True
+BP_NPC_3_C.VirtualTexture=True
+BP_NPC_3_C.Tags=True
+BP_NPC_3_C.AssetUserData=True
+BP_NPC_3_C.Activation=True
+BP_NPC_3_C.Cooking=True
+BP_NPC_3_C.Character Movement (General Settings)=True
+BP_NPC_3_C.Character Movement: Walking=True
+BP_NPC_3_C.Character Movement: Jumping / Falling=True
+BP_NPC_3_C.Character Movement (Networking)=True
+BP_NPC_3_C.Character Movement: Swimming=True
+BP_NPC_3_C.Character Movement: Flying=True
+BP_NPC_3_C.Character Movement: Custom Movement=True
+BP_NPC_3_C.Character Movement (Rotation Settings)=True
+BP_NPC_3_C.Character Movement: Physics Interaction=True
+BP_NPC_3_C.Character Movement=True
+BP_NPC_3_C.Character Movement: Avoidance=True
+BP_NPC_3_C.RootMotion=True
+BP_NPC_3_C.Character Movement: NavMesh Movement=True
+BP_NPC_3_C.NavMovement=True
+BP_NPC_3_C.Velocity=True
+BP_NPC_3_C.PlanarMovement=True
+BP_NPC_3_C.MovementComponent=True
+BP_NPC_3_C.Shape=True
+BP_NPC_3_C.Character=True
+BP_NPC_3_C.Camera=True
+BP_NPC_3_C.Pawn=True
+BP_NPC_3_C.Replication=True
+BP_NPC_3_C.Networking=True
+BP_NPC_3_C.WorldPartition=True
+BP_NPC_3_C.Input=True
+BP_NPC_3_C.Actor=True
+BP_NPC_3_C.Materials=True
+BP_NPC_2_C.Tick=True
+BP_NPC_2_C.ComponentTick=True
+BP_NPC_2_C.ComponentReplication=True
+BP_NPC_2_C.Variable=True
+BP_NPC_2_C.Events=True
+BP_NPC_3_C.Tick=True
+BP_NPC_3_C.ComponentTick=True
+BP_NPC_3_C.ComponentReplication=True
+BP_NPC_3_C.Variable=True
+BP_NPC_3_C.Events=True
+BP_DialogComponent_C.Collision=False
+BP_NPC_C.Default=True
+BP_NPC_C.Change=True
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/Blueprints/BP_PlayerCharacter.BP_PlayerCharacter
-OpenAssetsAtExit=/Game/Blueprints/NPC/Dialog_System/DA_DialogSimple.DA_DialogSimple
-OpenAssetsAtExit=/Game/Blueprints/NPC/Dialog_System/BP_DialogComponent.BP_DialogComponent
+OpenAssetsAtExit=/Game/Blueprints/NPC/DA_Dialog3.DA_Dialog3
+OpenAssetsAtExit=/Game/Blueprints/NPC/DA_DialogSimple.DA_DialogSimple
 OpenAssetsAtExit=/Game/Blueprints/NPC/Dialog_System/PDA_Dialog.PDA_Dialog
 OpenAssetsAtExit=/Game/Blueprints/NPC/Dialog_System/S_DialogEntry.S_DialogEntry
 OpenAssetsAtExit=/Game/Blueprints/BP_Target.BP_Target
-OpenAssetsAtExit=/Game/Blueprints/NPC/BP_NPC.BP_NPC
-OpenAssetsAtExit=/Game/Blueprints/NPC/Dialog_System/WB_Dialog.WB_Dialog
-OpenAssetsAtExit=/Game/Blueprints/NPC/Dialog_System/WB_DialogChoice.WB_DialogChoice
+OpenAssetsAtExit=/Game/Blueprints/NPC/DA_Dialog2.DA_Dialog2
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -2515,7 +2627,7 @@ ContentBrowserTab1.VerticalSplitter.SlotSize1=0.75
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints/NPC
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 ContentBrowserTab1.SelectedCollections=
@@ -2566,26 +2678,26 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/NPC/Dialog_System/BP_DialogComponent
-MRUItem1=/Game/Blueprints/Objects/Chest/BP_Chest
-MRUItem2=/Game/Blueprints/NPC/Dialog_System/WB_DialogChoice
-MRUItem3=/Game/Blueprints/NPC/Dialog_System/WB_Dialog
-MRUItem4=/Game/Blueprints/NPC/Dialog_System/DA_DialogSimple
-MRUItem5=/Game/Blueprints/NPC/Dialog_System/PDA_Dialog
-MRUItem6=/Game/Blueprints/NPC/Dialog_System/S_DialogEntry
-MRUItem7=/Game/Blueprints/NPC/BP_NPC
-MRUItem8=/Game/Blueprints/BP_Target
-MRUItem9=/Game/Level1
-MRUItem10=/Game/Blueprints/Shop/WB_BuyItem
-MRUItem11=/Game/UI/WB_HUD
-MRUItem12=/Game/Blueprints/BPC_Player_Stats
-MRUItem13=/Game/Blueprints/Shop/BP_Shop
-MRUItem14=/Game/Blueprints/BP_PlayerCharacter
-MRUItem15=/Game/UI/WB_GameOver
-MRUItem16=/Game/Equipment_System/UI/WB_Equipable_Slot
-MRUItem17=/Game/Equipment_System/UI/WB_HotBar
-MRUItem18=/Game/Equipment_System/BPC_EquipmentSystem
-MRUItem19=/Game/Equipment_System/UI/WB_Equipment
+MRUItem0=/Game/Blueprints/NPC/BP_NPC
+MRUItem1=/Game/Blueprints/BP_PlayerCharacter
+MRUItem2=/Game/Blueprints/NPC/BP_NPC_3
+MRUItem3=/Game/Blueprints/NPC/BP_NPC_2
+MRUItem4=/Game/Blueprints/NPC/DA_Dialog3
+MRUItem5=/Game/Blueprints/NPC/DA_Dialog2
+MRUItem6=/Game/Blueprints/NPC/Dialog_System/BP_DialogComponent
+MRUItem7=/Game/Blueprints/Objects/Chest/BP_Chest
+MRUItem8=/Game/Blueprints/NPC/Dialog_System/WB_DialogChoice
+MRUItem9=/Game/Blueprints/NPC/Dialog_System/WB_Dialog
+MRUItem10=/Game/Blueprints/NPC/Dialog_System/DA_DialogSimple
+MRUItem11=/Game/Blueprints/NPC/Dialog_System/PDA_Dialog
+MRUItem12=/Game/Blueprints/NPC/Dialog_System/S_DialogEntry
+MRUItem13=/Game/Blueprints/BP_Target
+MRUItem14=/Game/Level1
+MRUItem15=/Game/Blueprints/Shop/WB_BuyItem
+MRUItem16=/Game/UI/WB_HUD
+MRUItem17=/Game/Blueprints/BPC_Player_Stats
+MRUItem18=/Game/Blueprints/Shop/BP_Shop
+MRUItem19=/Game/UI/WB_GameOver
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -2693,6 +2805,8 @@ SkeletalMeshComponent.ComponentTick=False
 VerticalBox.Behavior=False
 VerticalBox.Accessibility=False
 Border.Appearance=False
+BP_NPC_C.Animation=False
+BP_NPC_C.Physics=False
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprint/BP_PlayerCharacter.BP_PlayerCharacter=0
@@ -2745,6 +2859,11 @@ Border.Appearance=False
 /Game/Equipment_System/UI/WB_HotBar.WB_HotBar=0
 /Game/UI/WB_GameOver.WB_GameOver=0
 /Game/Blueprints/NPC/Dialog_System/BP_DialogComponent.BP_DialogComponent=0
+/Game/Blueprints/NPC/BP_NPC.BP_NPC=0
+/Game/Blueprints/NPC/Dialog_System/WB_Dialog.WB_Dialog=0
+/Game/Blueprints/NPC/Dialog_System/WB_DialogChoice.WB_DialogChoice=0
+/Game/Blueprints/NPC/BP_NPC_2.BP_NPC_2=0
+/Game/Blueprints/NPC/BP_NPC_3.BP_NPC_3=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -3928,6 +4047,8 @@ PerWorldEditorSettings=(("/Game/Level1.Level1", (LoadedEditorRegions=((Min=(X=-1
 
 [PlacementMode]
 RecentlyPlaced=/Game/Blueprints/NPC/BP_NPC.BP_NPC;
+RecentlyPlaced=/Game/Blueprints/NPC/BP_NPC_3.BP_NPC_3;
+RecentlyPlaced=/Game/Blueprints/NPC/BP_NPC_2.BP_NPC_2;
 RecentlyPlaced=/Game/Blueprints/Shop/BP_Shop.BP_Shop;
 RecentlyPlaced=/Game/Blueprints/BP_SpawnPoint.BP_SpawnPoint;
 RecentlyPlaced=/Game/Equipment_System/BP_Weapon.BP_Weapon;
