Added shop for path in BP_NPC

--- a/PPG Project/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/PPG Project/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -263,7 +263,7 @@ TemplateSequenceEditorSettings=InputSettings.Bindings.ActionMappings,InputSettin
 UdpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.ActionMappings.Crouch,InputSettings.Bindings.ActionMappings.CameraSwitch,InputSettings.Bindings.ActionMappings.ChangeTypeOfProjectile,InputSettings.Bindings.ActionMappings.Sprint,InputSettings.Bindings.ActionMappings.Aim,InputSettings.Bindings.ActionMappings.Fire,InputSettings.Bindings.ActionMappings.Interaction,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.Test,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings.WheelUp,InputSettings.Bindings.AxisMappings.WheelDown,InputSettings.Bindings.AxisMappings.ZoomCamera,InputSettings.Bindings.AxisMappings.Go,IOSRuntimeSettings.Build.Remote Build Options,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,GameMapsSettings.DefaultModes.SelectedGameModeDetails,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod
 WmfMediaSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.ActionMappings.Crouch,InputSettings.Bindings.ActionMappings.CameraSwitch,InputSettings.Bindings.ActionMappings.ChangeTypeOfProjectile,InputSettings.Bindings.ActionMappings.Sprint,InputSettings.Bindings.ActionMappings.Aim,InputSettings.Bindings.ActionMappings.Fire,InputSettings.Bindings.ActionMappings.Interaction,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.Test,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings.WheelUp,InputSettings.Bindings.AxisMappings.WheelDown,InputSettings.Bindings.AxisMappings.ZoomCamera,InputSettings.Bindings.AxisMappings.Go,IOSRuntimeSettings.Build.Remote Build Options,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,GameMapsSettings.DefaultModes.SelectedGameModeDetails,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMode.SelectedGameModeDetails
-WorldPartitionRuntimeSpatialHash=
+WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMode.SelectedGameModeDetails
 BlendSpace=BlendSpace.Axis Settings.Vertical Axis,BlendSpace.Axis Settings.Horizontal Axis
 SkeletalMeshComponent=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SpringArmComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,Landscape.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.itemData
 BP_PlayerCharacter_C=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SpringArmComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,Landscape.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.itemData
@@ -339,6 +339,9 @@ PlayerCameraManager=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.Trans
 WB_NPCHelthBar_C=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SpringArmComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,Landscape.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.itemData
 WB_NPCName_C=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SpringArmComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,Landscape.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.itemData
 WidgetComponent=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SpringArmComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,Landscape.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.itemData
+SphereComponent=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SpringArmComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,Landscape.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.itemData
+PhysicsSpringComponent=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SpringArmComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,Landscape.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.itemData
+BPC_DialogComponent_C=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SpringArmComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,Landscape.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.itemData
 
 [EditorStartup]
 LastLevel=/Game/Level1
@@ -685,11 +688,13 @@ WB_Dialog_C="\"Object\" "
 WB_DialogChoice_C="\"Object\" "
 BP_NPC_2_C="\"Object\" "
 BP_NPC_3_C="\"Object\" "
-WidgetComponent="\"Object\" "
+WidgetComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 WB_NPCHelthBar_C="\"Object\" "
 WB_NPCName_C="\"Object\" "
 K2Node_SwitchString="\"Object\" \"Object.PinOptions.PinNames\" "
 K2Node_Switch="\"Object\" \"Object.PinOptions.PinNames\" "
+PhysicsSpringComponent="\"Object\" "
+BPC_DialogComponent_C="\"Object\" "
 
 [DetailCategories]
 WorldPartitionRuntimeSpatialHash.RuntimeSettings=True
@@ -2598,16 +2603,35 @@ BPC_Player_Stats_C.Default=True
 WB_Dialog_C.Default=True
 WB_DialogChoice_C.Default=True
 K2Node_SwitchString.PinOptions=True
+BP_NPC_2_C.Change=True
+BP_NPC_3_C.Change=True
+WB_NPCName_C.Appearance=True
+WB_NPCName_C.Input=True
+WB_NPCName_C.Interaction=True
+WB_NPCName_C.Designer=True
+WB_NPCName_C.Performance=True
+WB_NPCName_C.Layout=True
+WB_NPCName_C.Behavior=True
+WB_NPCName_C.Render Transform=True
+WB_NPCName_C.Localization=True
+WB_NPCName_C.Accessibility=True
+WB_NPCName_C.Clipping=True
+WB_NPCName_C.Navigation=True
+BPC_DialogComponent_C.Variable=True
+BPC_DialogComponent_C.Sockets=True
+BPC_DialogComponent_C.Default=True
+BPC_DialogComponent_C.Tags=True
+BPC_DialogComponent_C.ComponentTick=True
+BPC_DialogComponent_C.ComponentReplication=True
+BPC_DialogComponent_C.Activation=True
+BPC_DialogComponent_C.Cooking=True
+BPC_DialogComponent_C.Events=True
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/Blueprints/BP_PlayerCharacter.BP_PlayerCharacter
 OpenAssetsAtExit=/Game/Blueprints/NPC/BP_NPC.BP_NPC
 OpenAssetsAtExit=/Game/Blueprints/Shop/BP_Shop.BP_Shop
-OpenAssetsAtExit=/Game/Blueprints/NPC/ENPC_Role.ENPC_Role
-OpenAssetsAtExit=/Game/Blueprints/BP_PlayerCharacter.BP_PlayerCharacter
-OpenAssetsAtExit=/Game/Blueprints/NPC/Dialog_System/WB_Dialog.WB_Dialog
-OpenAssetsAtExit=/Game/Blueprints/NPC/Dialog_System/BP_DialogComponent.BP_DialogComponent
-OpenAssetsAtExit=/Game/Blueprints/NPC/Dialog_System/WB_DialogChoice.WB_DialogChoice
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -2712,26 +2736,26 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/BP_Target
-MRUItem1=/Game/Blueprints/NPC/DA_Dialog3
-MRUItem2=/Game/Blueprints/NPC/DA_DialogSimple
-MRUItem3=/Game/Level1
-MRUItem4=/Game/Blueprints/NPC/Dialog_System/WB_DialogChoice
-MRUItem5=/Game/Blueprints/NPC/Dialog_System/BP_DialogComponent
-MRUItem6=/Game/Blueprints/NPC/Dialog_System/WB_Dialog
-MRUItem7=/Game/Blueprints/NPC/DA_Dialog2
-MRUItem8=/Game/Blueprints/BP_PlayerCharacter
-MRUItem9=/Game/Blueprints/NPC/ENPC_Role
-MRUItem10=/Game/Blueprints/Shop/BP_Shop
-MRUItem11=/Game/Blueprints/NPC/BP_NPC
-MRUItem12=/Game/Blueprints/NPC/Dialog_System/S_DialogEntry
-MRUItem13=/Game/UI/WB_NPCHelthBar
-MRUItem14=/Game/UI/WB_NPCName
-MRUItem15=/Game/UI/WB_Name
-MRUItem16=/Game/Blueprints/BPC_Player_Stats
-MRUItem17=/Game/UI/WB_HUD
-MRUItem18=/Game/Blueprints/NPC/BP_NPC_3
-MRUItem19=/Game/Blueprints/NPC/BP_NPC_2
+MRUItem0=/Game/Blueprints/NPC/BP_NPC_2
+MRUItem1=/Game/Blueprints/Shop/BP_Shop
+MRUItem2=/Game/Blueprints/NPC/BP_NPC
+MRUItem3=/Game/Blueprints/BP_PlayerCharacter
+MRUItem4=/Game/Level1
+MRUItem5=/Game/UI/WB_NPCName
+MRUItem6=/Game/Blueprints/NPC/BP_NPC_3
+MRUItem7=/Game/Blueprints/BP_Target
+MRUItem8=/Game/Blueprints/NPC/DA_Dialog3
+MRUItem9=/Game/Blueprints/NPC/DA_DialogSimple
+MRUItem10=/Game/Blueprints/NPC/Dialog_System/WB_DialogChoice
+MRUItem11=/Game/Blueprints/NPC/Dialog_System/BP_DialogComponent
+MRUItem12=/Game/Blueprints/NPC/Dialog_System/WB_Dialog
+MRUItem13=/Game/Blueprints/NPC/DA_Dialog2
+MRUItem14=/Game/Blueprints/NPC/ENPC_Role
+MRUItem15=/Game/Blueprints/NPC/Dialog_System/S_DialogEntry
+MRUItem16=/Game/UI/WB_NPCHelthBar
+MRUItem17=/Game/UI/WB_Name
+MRUItem18=/Game/Blueprints/BPC_Player_Stats
+MRUItem19=/Game/UI/WB_HUD
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -4075,7 +4099,7 @@ Contexts=(Name="AnimationBlueprintEditor",Commands=)
 bHideUnrelatedNodes=False
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=BlueprintLog
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -4557,4 +4581,5 @@ TreeViewWidth=0.300000
 
 [SuppressableDialogs]
 DeleteConfirmationVariable_Warning=False
+ChangeVariableType_Warning=False
 
